chatops/k8s/04-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ${CHATOPS_NAME}
  namespace: ${INFRA_NAMESPACE}
  labels:
    app: ${CHATOPS_NAME}
spec:
  to:
    kind: Service
    name: ${CHATOPS_NAME}
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
